# manuscript

./: LICENSE  README.md  pyproject.toml  ruff.toml
docs/: SYSTEMEXIT_SOLUTION.md  TESTING_APPROACH.md
src/manu/: __init__.py  capture.py  conf.py  context.py  core.py  docstring.py  hooks.py  model.py  parsing.py  patcher.py  script.py
tests/: README.md  __init__.py  conftest.py  test_basic_functionality.py  test_basic_functionality_alternative.py  test_cli_generation.py  test_conf_markers.py  test_config_files.py  test_edge_cases.py  test_examples.py  test_hooks.py  test_integration.py  test_performance.py  test_simple_working.py  test_type_validation.py  test_tyro_systemexit_handling.py  test_working_examples.py
